--- a/style.css
+++ b/style.css
@@ -102,6 +102,30 @@ header {
     white-space: pre-line; /* mantem as quebras do texto */
 }
 
+#somos-invertidos {        /*SOMOS-INVERTIDOS*/
+  background-color: rgb(39, 100, 39);
+}
+#somos-invertidos h1 {
+    color: #f0f0f0;
+    border-left: 6px solid #1a1a1a;
+}
+
+#somos-invertidos p {    
+    color: #c6c6c6;
+}
+#somos-invertidos .subtitle {
+    font-size: 1.20rem;
+    color: #d5d4d4;
+    font-weight: 700;
+}
+#extra-info {
+    max-width: 100%;
+    border-radius: 12px;
+    padding: 8px;
+    background-color: #383737;
+    color: #ccc;
+}
+
 /* Responsividade */
 @media (max-width: 768px) {
     header {
@@ -294,3 +318,48 @@ header {
 h3 {
     color: #218838;
 }
+
+/* RODAPE -- LEO 28/05 */
+.rodape {
+    width: 100%;
+    margin-top: 140px;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    background-color: #222;
+    color: #fff;
+    padding: 40px 20px;
+  }
+  
+  .coluna-rodape {
+    flex: 1 1 200px;
+    margin: 20px;
+  }
+  
+  .coluna-rodape h3 {
+    font-size: 18px;
+    margin-bottom: 10px;
+    color: #f1f1f1;
+    border-bottom: 1px solid #555;
+    padding-bottom: 5px;
+  }
+  
+  .coluna-rodape ul {
+    list-style: none;
+    padding: 0;
+  }
+  
+  .coluna-rodape ul li {
+    margin-bottom: 8px;
+    font-size: 14px;
+  }
+  
+  .coluna-rodape a {
+    color: #ccc;
+    text-decoration: none;
+    transition: color 0.3s ease;
+  }
+  
+  .coluna-rodape a:hover {
+    color: #fff;
+  }
+  
