--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    scroll-behavior: smooth;
 }
 
 body {
@@ -14,7 +15,6 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-bottom: 3rem;
 }
 
 /* Navbar */
@@ -34,11 +34,18 @@ header {
     box-shadow: 0 2px 10px rgba(0,0,0,0.5);
 }
 
+.logo {
+  display: flex;
+  align-items: center; /* Alinha verticalmente */
+  gap: 10px; /* Espaçamento entre a imagem e o texto */
+}
+
 .logo img {
-    height: 80px;
-    width: auto;
-    filter: none;
-    transition: transform 0.3s ease;
+  height: 70px; /* Ajuste conforme seu layout */
+}
+
+.logo #titulo-pagina {
+    color: #28a745;
 }
 
 .logo img:hover {
@@ -82,6 +89,10 @@ header {
     transition: background 0.3s ease;
 }
 
+#somos-maior {
+    max-width: 1300px;
+}
+
 .somos:hover {
     background: #2c2c2c;
 }
@@ -117,7 +128,15 @@ header {
     font-weight: 700;
     color: #e0e0e0;
     margin-top: 2rem;
-    margin-bottom: 0.6rem;
+    margin-bottom: 1.3rem;
+    letter-spacing: 0.5px;
+}
+#somos-invertidos .panel .title-interno {
+    font-size: 1.7rem;
+    font-weight: 700;
+    color: #e0e0e0;
+    text-align: center;
+    /* margin-bottom: 0.9rem; */
     letter-spacing: 0.5px;
 }
 #somos-invertidos .subtitle-inverse {
@@ -308,6 +327,17 @@ header {
     background-color: #218838;
 }
 
+.card .link {
+    font-size: 1rem;
+    font-weight: 900;
+    color: #232323;
+    margin-top: 1rem;
+}
+
+.card .link:hover {
+    cursor: pointer;
+}
+
 h3 {
     color: #218838;
 }
@@ -318,8 +348,8 @@ h3 {
     margin-top: 140px;
     flex-wrap: wrap;
     justify-content: space-around;
-    background-color: #222;
     color: #fff;
+    background: transparent;
     padding: 40px 20px;
 }
 .coluna-rodape {
@@ -348,4 +378,61 @@ h3 {
 }
 .coluna-rodape a:hover {
     color: #fff;
+}
+
+
+/* ESTILO E BASE DA AREA DOS PORTIFOLIOS */
+.cards-portifolio {
+    max-width: 300px;
+    justify-content: center;
+    text-align: center;
+    margin-top: 2rem;
+    background-color: #00ccff;
+}
+
+.cards-portifolio .titulo-portifolio {
+    font-size: 2rem;
+}
+
+/* Estilo base do rodapé */
+.rodape {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  color: #f1f1f1;
+  padding: 90px 20px;
+  gap: 30px;
+}
+
+.coluna-rodape {
+  flex: 1 1 200px;
+}
+
+.coluna-rodape h3 {
+  margin-bottom: 10px;
+  font-size: 18px;
+  color: #28a745;
+}
+
+.coluna-rodape ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.coluna-rodape li,
+.coluna-rodape p {
+  margin-bottom: 8px;
+  font-size: 15px;
+  color: #ccc;
+}
+
+.coluna-rodape a {
+  color: #ccc;
+  text-decoration: none;
+  transition: color 0.3s ease;
+}
+
+.coluna-rodape a:hover {
+  color: #00ccff;
 }
