--- a/style.css
+++ b/style.css
@@ -259,8 +259,16 @@ header {
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 20px;
+    /* gap: 20px; */
     flex-wrap: wrap;
+    margin-top: 20px;
+    margin-left: 0px;
+}
+#iconesPortifolio {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
     margin-top: 20px;
 }
 .icone img {
@@ -342,6 +350,9 @@ h3 {
     color: #218838;
 }
 
+
+
+
 /* Rodapé */
 .rodape {
     width: 100%;
@@ -392,6 +403,8 @@ h3 {
 .cards-portifolio .titulo-portifolio {
     font-size: 2rem;
 }
+
+
 
 /* Estilo base do rodapé */
 .rodape {
@@ -449,9 +462,55 @@ h3 {
     text-align: center;
 }
 
-.icon {
+.icon  {
   width: 200px !important;
   height: 200px !important;
   border-radius: 50% !important;
   object-fit: cover !important;
+}
+
+#iconPortifolio {
+    max-width: 700px !important;
+    /* max-height: 600px !important; */
+    border-radius: 70px !important;
+    object-fit: cover !important; 
+    justify-content: center;
+} 
+
+
+
+
+
+                        /* PORTIFOLIOS */
+
+.divPortifolio {
+    max-width: 1400px;
+    margin: 4rem 1.5rem 2rem;
+    background: #1e1e1e;
+    padding: 2.5rem 3rem;
+    border-radius: 15px;
+    display: flex;
+    box-shadow: 0 8px 20px rgba(0,0,0,0.8);
+    transition: background 0.3s ease;
+}
+
+.divPortifolio div {
+    max-width: 600px;
+    /* background-color: #218838; */
+    padding-left: 40px;
+}
+
+.divPortifolio div h1 {
+    font-size: 35px;
+}
+.divPortifolio div h4 {
+    margin-top: 13px;
+}
+
+.divPortifolio div ul {
+    max-width: 150px;
+    text-align: center;
+    justify-items: center;
+    list-style-type: none;
+    background-color: #00ccff;
 }
