--- a/style.css
+++ b/style.css
@@ -510,3 +510,64 @@ h3 {
     list-style-type: none;
     background-color: #00ccff;
 }
+
+/* 
+.lista-tecnologias {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 40px;
+    list-style: none;
+    padding: 20px 0;
+    flex-wrap: wrap; 
+} 
+
+
+.lista-tecnologias li {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background: #2a2a2a;
+    padding: 20px;
+    border-radius: 12px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
+    transition: transform 0.3s ease, background 0.3s;
+    width: 160px;
+}
+
+.lista-tecnologias li:hover {
+    transform: translateY(-5px);
+    background: #333;
+}
+
+.lista-tecnologias p {
+    margin-top: 10px;
+    font-size: 1.1rem;
+    font-weight: 600;
+    color: #e0e0e0;
+} */
+
+.sobre-mim {
+  max-width: 900px;
+  background-color: #1e1e1e;
+  padding: 2.5rem 3rem;
+  border-radius: 15px;
+  margin: 4rem 1.5rem 2rem;
+  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.8);
+  color: #e0e0e0;
+}
+
+.sobre-mim h1 {
+  font-size: 2.5rem;
+  margin-bottom: 1rem;
+  font-weight: 700;
+  color: #28a745;
+  border-left: 6px solid #4caf50;
+  padding-left: 1rem;
+}
+
+.sobre-mim p {
+  font-size: 1.15rem;
+  line-height: 1.6;
+  color: #ccc;
+}
