--- a/responsividade.css
+++ b/responsividade.css
@@ -62,6 +62,7 @@
     }
 
 
+
 }
 
 @media (max-width: 480px) {
@@ -107,4 +108,53 @@
         max-width: 90%;
         margin-bottom: 20px;
     }
+
+    #iconPortifolio {
+        max-width: 300px;
+        max-height: 300px !important;
+        align-items: center;
+    }
+
+    .divPortifolio {
+        max-width: 600px;
+        display: block;
+        align-items: center;
+        padding: 0.8rem 0.6rem;
+        text-align: left ;
+    }
+
+    
+    .divPortifolio div {
+        max-width: 600px;
+        /* background-color: #218838; */
+        padding-left: 15px;
+    }
+
+    .area-projetos {
+        max-width: 400px;
+    }
+
+    .area-projetos-titulo {
+        font-size: 2rem;
+    }
+
+    .print {
+        max-width: 700%;
+    }
+
+    .contato {
+        max-width: 400px;
+        justify-content: center;
+    }
+
+    .contato h1 {
+        font-size: 1.8rem;
+    }
+    .formas h3 {
+        font-size: 1.1rem;
+    }
+    .formas li {
+        font-size: 1rem;
+    }
+
 }
