--- a/style.css
+++ b/style.css
@@ -481,11 +481,12 @@ h3 {
 
 
 #iconPortifolio {
-    max-width: 700px !important;
-    /* max-height: 600px !important; */
+    max-width: 700px;
+    max-height: 600px !important;
     border-radius: 70px !important;
     object-fit: cover !important; 
     justify-content: center;
+    object-fit: cover !important;
 } 
 
 
@@ -500,7 +501,7 @@ h3 {
     padding: 2.5rem 3rem;
     border-radius: 15px;
     display: flex;
-    justify-content: center;
+    align-items: center;
     box-shadow: 0 8px 20px rgba(0,0,0,0.8);
     transition: background 0.3s ease;
 }
@@ -533,15 +534,17 @@ h3 {
   border-radius: 16px;
   box-shadow: 0 8px 20px rgba(0, 0, 0, 0.8);
   text-align: center;
+  align-items: center;
 }
 
 .area-projetos-titulo {
-  font-size: 2.5rem;
-  color: #28a745;
-  margin-bottom: 2rem;
-  border-bottom: 4px solid #28a745;
-  display: inline-block;
-  padding-bottom: 10px;
+    font-size: 2.2rem;
+    color: #e0e0e0;
+    border-bottom: 3px solid #28a745;
+    padding-bottom: 0.5rem;
+    margin-bottom: 40px;
+    text-align: center;
+    
 }
 
 .lista-projetos {
@@ -602,12 +605,12 @@ h3 {
   transition: background 0.3s ease;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  justify-content: center;
   gap: 2rem;
 }
 
 /* Título */
-.contato > h1 {
+.contato h1 {
   font-size: 2.2rem;
   color: #e0e0e0;
   border-bottom: 3px solid #28a745;
@@ -658,7 +661,6 @@ h3 {
   line-height: 1.5;
 }
 
-/* Botão de WhatsApp */
 #formasZAP Button {
   background-color: #28a745;
   color: #fff;
@@ -669,9 +671,11 @@ h3 {
   cursor: pointer;
   transition: background 0.3s, transform 0.3s;
   margin-top: 1rem;
+
 }
 
 #formasZAP Button:hover {
   background-color: #218838;
   transform: translateY(-2px);
+  color: white;
 }
